Updated to official Forward colors.

--- a/content/themes/forward/assets/bootstrap/less/variables.less
+++ b/content/themes/forward/assets/bootstrap/less/variables.less
@@ -25,7 +25,10 @@
 @orange:                #f89406;
 @pink:                  #c3325f;
 @purple:                #7a43b6;
-@forwardGreen:          #8BC758;
+
+@forwardGreen:          #c1d72e;
+@forwardGray: #808084;
+@forwardGrayDark: #404041;
 
 
 // Scaffolding
@@ -36,8 +39,8 @@
 
 // Links
 // -------------------------
-@linkColor:             @green;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColor:             darken(@forwardGreen, 15%);
+@linkColorHover:        darken(@linkColor, 10%);
 
 
 // Typography
