--- a/content/themes/forward/assets/less/style.less
+++ b/content/themes/forward/assets/less/style.less
@@ -21,7 +21,7 @@ Styling for default HTML elements.
 // }
 
 body {
-  color: @grayLight;
+  color: @forwardGray;
   font-size: @baseFontSize;
   font-family: @baseFontFamily;
   line-height: 1.5;
@@ -51,6 +51,10 @@ p {
 }
 
 small { font-size: 80%; }
+
+h1, h2, h3, h4 {
+  color: @forwardGrayDark;
+}
 
 h1 {
   &.logo {
@@ -84,10 +88,10 @@ h3 {
 }
 h1, h2, h3, h4 {
   > a {
-    color: @grayLight;
+    color: @forwardGrayDark;
   }
   > a:hover {
-    color: darken(@grayLight, 15%);
+    color: darken(@forwardGrayDark, 15%);
   }
 }
 
@@ -213,7 +217,7 @@ Styling for structure of the site.
 
 .wrapper-nav-primary {
   .at2x('../images/bg-cross.png', 6px, 6px);
-  background-color: @green;
+  background-color: @forwardGreen;
   .box-shadow(inset 0 0 6px fadeout(@black, 50%));
   margin-bottom: 40px;
 }
